refactor: simplify execution result handling and improve debug state management